syntax = "proto3";

option csharp_namespace = "GrpcService";

package Authentication;

service Authentication {
  rpc Authenticate (AuthenticationRequest) returns (AuthenticationResponse);
}

message AuthenticationRequest{
	string UserName = 1;
	string Password = 2;
}

message AuthenticationResponse{
	string JwtToken = 1;
	int32 ExpiresIn = 2;
}